--- a/css/styles.css
+++ b/css/styles.css
@@ -299,3 +299,15 @@ ul {
 .header-icons {
   margin-right: 10px;
 }
+.list-icon-box {
+  display: flex;
+  width: 270px;
+  height: 120px;
+  border-radius: 4px;
+  background-color: var(--color-buttons);
+  justify-content: center;
+  align-items: center;
+  /* padding-top: 25px;
+  padding-bottom: 25px; */
+  margin-bottom: 30px;
+}
